// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<MakeWebWidget /> should match to snapshot when exist error 1`] = `
<OutsideClickHandler
  onOutSideClick={[Function]}
>
  <form
    className="MakeWebWidget"
  >
    <h5
      className="MakeWebWidget__title"
    >
      Make new web widget
    </h5>
    <div
      className="InputSet"
    >
      <p
        className="InputSet__label"
      >
        Name
      </p>
      <input
        className="InputSet__text-input"
        onChange={[Function]}
        placeholder="Write your site name"
        type="text"
        value="mock-name"
      />
      <p
        className="InputSet__validate-message"
      >
        mock-error
      </p>
    </div>
    <div
      className="InputSet"
    >
      <p
        className="InputSet__label"
      >
        Url
      </p>
      <input
        className="InputSet__text-input"
        onChange={[Function]}
        placeholder="Keep it 'http://' or 'https://'"
        type="text"
        value="mock-url"
      />
      <p
        className="InputSet__validate-message"
      >
        mock-error
      </p>
    </div>
    <div
      className="MakeWebWidget__button-set"
    >
      <button
        className="Btn Btn-middle"
        onClick={[Function]}
        type="button"
      >
        Close
      </button>
      <input
        className="Btn Btn--primary"
        onClick={[Function]}
        type="submit"
        value="Create New Widget"
      />
    </div>
  </form>
</OutsideClickHandler>
`;

exports[`<MakeWebWidget /> should match to snapshot when render default 1`] = `
<OutsideClickHandler
  onOutSideClick={[Function]}
>
  <form
    className="MakeWebWidget"
  >
    <h5
      className="MakeWebWidget__title"
    >
      Make new web widget
    </h5>
    <div
      className="InputSet"
    >
      <p
        className="InputSet__label"
      >
        Name
      </p>
      <input
        className="InputSet__text-input"
        onChange={[Function]}
        placeholder="Write your site name"
        type="text"
        value=""
      />
    </div>
    <div
      className="InputSet"
    >
      <p
        className="InputSet__label"
      >
        Url
      </p>
      <input
        className="InputSet__text-input"
        onChange={[Function]}
        placeholder="Keep it 'http://' or 'https://'"
        type="text"
        value=""
      />
    </div>
    <div
      className="MakeWebWidget__button-set"
    >
      <button
        className="Btn Btn-middle"
        onClick={[Function]}
        type="button"
      >
        Close
      </button>
      <input
        className="Btn Btn--primary"
        onClick={[Function]}
        type="submit"
        value="Create New Widget"
      />
    </div>
  </form>
</OutsideClickHandler>
`;
